examples/test/testpolicy411.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy411
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key27: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value21
          key13: value0
      podSelector:
        matchLabels:
          key13: value47
          key10: value46
          key33: value9
